# Region-Growing

./: CMakeLists.txt  README.md  color.cpp  manifest.xml  prueba.cpp
